add test for passing in array query parameter
